--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<div id="page-wrapper">
 	<div id="support-menu">
 			<ul >
-				<li><a href="#" id="supMenLi1">Support</a></li>
+				<li><a href="https://bogdan-ztmr.wixsite.com/myworkmylife/portfolio" id="supMenLi1">Support</a></li>
 				
 				<li><a href="#" id="supMenLi2">Share</a></li>
-				<li><a href="#" id="supMenLi3">Contacts</a></li>
-				<li><a href="#" id="supMenLi4">AboutUs</a></li>
+				<li><a href="https://bogdan-ztmr.wixsite.com/myworkmylife" id="supMenLi3">Contacts</a></li>
+				<li><a href="https://bogdan-ztmr.wixsite.com/myworkmylife" id="supMenLi4">AboutUs</a></li>
 			</ul>
 			</div>
 		<div class="container">
